--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+# Cac file bao mat khong add len git 
 # dependencies
 /node_modules
 /.pnp
