--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^2.3.4",
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
