--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT=3002
 MONGO=mongodb+srv://htrang1801:htrang1801@cluster0.jldlscg.mongodb.net/Travel?retryWrites=true&w=majority
 JWT_SECRET=7tC0nBC7nU0VpiHH0HH3zCidF7yIhufk
