--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4",
