--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^2.3.4",
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
