--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "slugify": "^1.6.5",
     "validator": "^13.7.0"
   }
 }
