--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "delete": "node dev-data/data/import-dev-data.js --delete",
+    "import": "node dev-data/data/import-dev-data.js --import"
   },
   "author": "huyentrang",
   "license": "ISC",
