--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.1",
+    "react-tabs": "^5.1.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
