--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
     "firebase": "^9.13.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-collapsible": "^2.10.0",
