--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.13.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.10.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
