--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-load": "^1.1.16",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
